--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MCAD"]
 	path = MCAD
 	url = git@github.com:stefanSchuhbaeck/MCAD.git
+[submodule "round_anything"]
+	path = round_anything
+	url = git@github.com:stefanSchuhbaeck/Round-Anything.git
